@@ -78,10 +78,13 @@ jobs:
           QT_QPA_PLATFORM: offscreen
         run: cmake --build build --target coverage-unittests
 
+      # Retry integtests coverae as gcovr intermittently fails to parse .gcda files.
       - name: Integration tests coverage
         env:
           QT_QPA_PLATFORM: offscreen
-        run: cmake --build build --target coverage-integtests
+        uses: ./.github/actions/run-retry
+        with:
+          run: cmake --build build --target coverage-integtests
 
       - name: Get coverage report paths
         id: coverage-paths
